chore(package): add express as dev depend

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-task-module",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "Task module for NestJS apps",
   "author": {
     "name": "Vadim Usinov",
@@ -30,6 +30,7 @@
     "@nestjs/cli": "^6.9.0",
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/platform-express": "6.10.5",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
     "@types/cron": "^1.7.1",
@@ -68,5 +69,9 @@
     },
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WazZro/nestjs-task-module.git"
   }
 }
